<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_black"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product_black"
            android:title="@string/nav_product" />

        <item
            android:id="@+id/nav_box"
            android:icon="@drawable/ic_box_black"
            android:title="@string/nav_box" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/string_utilitarios">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:title="@string/title_activity_usuarios" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
