<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.carlosaurelio.anotaai.activity.AddEditProdutoActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.AddEditProdutoActivity"
        tools:showIn="@layout/activity_add_edit_produto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/edtNomeProduto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_nome_do_produto"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lCodigoExterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/edtCodigoExterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_codigo_externo"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spnUnidadeMedida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_enableErrorLabel="true"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelText="@string/string_unidade_de_medida"
                app:ms_hint="@string/string_unidade_de_medida"
                app:ms_hintColor="@color/colorAccent"
                app:ms_errorColor="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lPrecoVenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/edtPrecoVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_preco_de_venda"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>